--- a/eShop/client/src/index.css
+++ b/eShop/client/src/index.css
@@ -1,4 +1,9 @@
+
 body {
-    background-color: rgba(0,183,255, 1);
-    background-image: url("Background.jpg");
+    background-color: #f7f8fc;
+}
+
+* {
+    /* font-family: 'Noto Sans JP' !important; */
+    font-family: 'Heebo', sans-serif !important;
 }
